Fix Vercel 404: config output path and rewrites

--- a/FRONT/angular.json
+++ b/FRONT/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/gestion-entrepot",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
