Configuration cPanel et Build Production

--- a/BACK/.env
+++ b/BACK/.env
@@ -6,12 +6,12 @@
 # DB_NAME=defaultdb
 # DB_SSL=true
 
-# Configuration Base de données (Local)
-DB_HOST=localhost
+# Configuration Base de données (cPanel Production)
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=gestionentrepots
+DB_USER=cp2748240p13_manager
+DB_PASSWORD=Entrepots2026!
+DB_NAME=cp2748240p13_gestionentrepots
 # DB_SSL=false
 
 # Configuration Serveur
