--- a/BACK/.env
+++ b/BACK/.env
@@ -7,7 +7,7 @@
 # DB_SSL=true
 
 # Configuration Base de données (cPanel Production)
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
 DB_USER=cp2748240p13_manager
 DB_PASSWORD=Entrepots2026!
