Refactor code structure for improved readability and maintainability

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,7 +7,7 @@ deployment:
     - /bin/mkdir -p /home/cp2748240p13/api
     - /bin/cp -R BACK/* /home/cp2748240p13/api/
     # On supprime l'installation auto de NPM qui bloque souvent
-    # - cd /home/cp2748240p13/api && /usr/bin/npm install --production
+    - cd /home/cp2748240p13/api && /usr/bin/npm install --production
 
     # 2. Déploiement du FRONTEND (Angular)
     # ATTENTION : Cela suppose que vous avez commité le dossier 'dist' (build local)
