--- a/BACK/.env
+++ b/BACK/.env
@@ -1,17 +1,26 @@
 # Configuration Base de données (Aiven MySQL - COMMENTÉ)
-# DB_HOST=mysql-1cb1a755-gestion-entrepots.a.aivencloud.com
-# DB_PORT=25763
-# DB_USER=avnadmin
-# DB_PASSWORD=REMPLACER_PAR_VOTRE_MOT_DE_PASSE_AIVEN
-# DB_NAME=defaultdb
-# DB_SSL=true
+DB_HOST=mysql-1cb1a755-gestion-entrepots.a.aivencloud.com
+DB_PORT=25763
+DB_USER=avnadmin
+DB_PASSWORD=REMPLACER_PAR_VOTRE_MOT_DE_PASSE_AIVEN
+DB_NAME=defaultdb
+DB_SSL=true
 
-# Configuration Base de données (cPanel Production)
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=cp2748240p13_manager
-DB_PASSWORD=Entrepots2026!
-DB_NAME=cp2748240p13_gestionentrepots
+# --- CONFIGURATION LOCALE (Pour tester sur votre PC) ---
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_USER=root
+# Laissez vide si vous n'avez pas de mot de passe en local (ex: XAMPP/WAMP)
+# DB_PASSWORD=
+# DB_NAME=gestionentrepots
+# DB_SSL=false
+
+# --- CONFIGURATION PRODUCTION (Commentée pour le moment) ---
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_USER=cp2748240p13_manager
+# DB_PASSWORD=Entrepots2026!
+# DB_NAME=cp2748240p13_gestionentrepots
 # DB_SSL=false
 
 # Configuration Serveur
