--- a/BACK/.env
+++ b/BACK/.env
@@ -1,17 +1,17 @@
 # Configuration Base de données (Aiven MySQL - COMMENTÉ)
-# DB_HOST=mysql-1cb1a755-gestion-entrepots.a.aivencloud.com
-# DB_PORT=25763
-# DB_USER=avnadmin
-# DB_PASSWORD=REMPLACER_PAR_VOTRE_MOT_DE_PASSE_AIVEN
-# DB_NAME=defaultdb
-# DB_SSL=true
+DB_HOST=mysql-1cb1a755-gestion-entrepots.a.aivencloud.com
+DB_PORT=25763
+DB_USER=avnadmin
+DB_PASSWORD=REMPLACER_PAR_VOTRE_MOT_DE_PASSE_AIVEN
+DB_NAME=defaultdb
+DB_SSL=true
 
 # Configuration Base de données (Local)
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=gestionentrepots
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=gestionentrepots
 # DB_SSL=false
 
 # Configuration Serveur
