--- a/BACK/.env
+++ b/BACK/.env
@@ -1,11 +1,5 @@
-# Configuration Base de données (Aiven MySQL - COMMENTÉ)
-# DB_HOST=mysql-1cb1a755-gestion-entrepots.a.aivencloud.com
-# DB_PORT=25763
-# DB_USER=avnadmin
-# DB_PASSWORD=REMPLACER_PAR_VOTRE_MOT_DE_PASSE_AIVEN
-# DB_NAME=defaultdb
-# DB_SSL=true
-
+# Configuration Base de données (Production cPanel)
+# Utiliser l'identifiant de base de données fourni par l'hébergeur.
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=cp2748240p13_manager
@@ -13,13 +7,10 @@ DB_PASSWORD=Entrepots2026!
 DB_NAME=cp2748240p13_gestionentrepots
 DB_SSL=true
 
-# Configuration Base de données (Local)
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=gestionentrepots
-DB_SSL=false
+# NOTE: évitez d'avoir plusieurs blocs DB dans ce fichier ;
+# la dernière occurrence remplace les précédentes. Si vous
+# déployez sur un autre environnement (local), adaptez ces
+# valeurs ou fournissez un .env spécifique à l'environnement.
 
 # Configuration Serveur
 PORT=3000
